# os-service-types

./: .coveragerc  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
os_service_types/: __init__.py  exc.py  service_types.py  types.py
os_service_types/data/: __init__.py  service-types.json
os_service_types/tests/: base.py  test_builtin.py  test_data.py  test_match.py  test_misc.py  test_os_service_types.py  test_remote.py  test_singleton.py  test_warn.py
releasenotes/notes/: add-service-types-class-574caf54f7461163.yaml  drop-python-2-7-73d3113c69d724d6.yaml  drop-python-3-9-7e17864332d1675f.yaml  get-service-types-f5e56799a55a6df4.yaml  missed-notes-d16705a6a56eb3c6.yaml
releasenotes/source/: conf.py  index.rst  master.rst
tools/: tox_install.sh
